<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ContactDetailsFragment"
    android:background="#65083D">

    <ImageView
        android:id="@+id/isImportantFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/imageTextView"
        app:layout_constraintTop_toTopOf="@+id/imageTextView" />

    <TextView
        android:id="@+id/imageTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        android:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintWidth_percent="0.4"
        tools:text="M" />

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTextView"
        tools:text="Максим Шикунец" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName"
        app:layout_constraintEnd_toStartOf="@id/linearLayout2"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:id="@+id/imageCall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/telephone" />

        <TextView
            android:id="@+id/textCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="serif"
            android:text="@string/call"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintDimensionRatio="H,1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/contactName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:id="@+id/imageSMS"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/apple" />

        <TextView
            android:id="@+id/textSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="serif"
            android:text="@string/sms"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobilePhoneContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/telephone_container"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintDimensionRatio="H,0.22"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_information"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mobilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="+375 (25) 511-81-90" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tagsH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tags"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mobilePhoneContainer"
        app:layout_constraintTop_toBottomOf="@+id/mobilePhoneContainer" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/tagContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:flow_verticalGap="10dp"
        app:flow_horizontalGap="10dp"
        app:flow_horizontalBias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsH"/>

</androidx.constraintlayout.widget.ConstraintLayout>
